Project 8: Contrast Fix

--- a/techdegree/proj8/css/styles.css
+++ b/techdegree/proj8/css/styles.css
@@ -10,7 +10,7 @@ body {
 	padding: 0;
 	text-align: center;
 	font-family: 'Lato', sans-serif;
-	color: #02CBA4;
+	color: #02eabb;
 	background: #2d2b30;
 }
 fieldset {
@@ -107,7 +107,7 @@ header .name {
 	font-weight: 600;
 	padding: 20px;
 	text-transform: uppercase;
-	color: #781125
+	color: #781125;
 }
 .card {
 	margin: 30px;
